# simple-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: terraform.yml
infra/: docker.tpl  main.tf
pipeline/: fetch_anilist.py
rag/: app.py  chat_ollama.py  ingest.py  ollama_api.py  rag_controller.py  settings.py
